--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-this is the project created from the OP stackoverlow post about comparing data. Iam Nooblord828
+this is the project created from the OP stackoverlow post about comparing data. Iam Nooblord828, 
+Unedumacated Engineer is my Senior design partner we are 2 out of 5 in our senior design team. we are all educating mostly in hardware design so the software aspect of this project is a stretch for us.
 
 below is hte "answer" i gave to support OP's post. 
 
