--- a/README
+++ b/README
@@ -3,6 +3,10 @@ this is the project created from the OP stackoverlow post about comparing data. 
 Unedumacated Engineer is my Senior design partner we are 2 out of 5 in our senior design team. we are all educating mostly in hardware design so the software aspect of this project is a stretch for us.
 
 currently "flowdata" is a freshly made django project. with a website app.
+
+Project soft due date Nov 14th.
+
+Project Hard due date Nov 3oth.
 ******************************************************************
 below is hte "answer" i gave to support OP's post. 
 
