--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Project soft due date Nov 14th.
 
 Project Hard due date Nov 3oth.
 ******************************************************************
-below is hte "answer" i gave to support OP's post. 
+below is the  "answer" i gave to support OP's post. 
 
 Adding my comment as an answer. Iam supporting this project with OP. We are designing a software controlled irrigation controller that collects flow data in specific watering zones. We are implementing an arduino as a device Driver and a raspberry pi as a single board computer.
 
